--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = wagtail-all-in-one-accessibility
-version = 2.0
-description = A wagtail App based on assistive technology that helps organizations enhance the accessibility and usability of their website
-long_description = file: Readme.md
+version = 2.1.0
+description = Website accessibility widget for improving WCAG 2.0, 2.1, 2.2 and ADA compliance!
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://www.skynettechnologies.com
 author = Skynet Technologies USA LLC
 author_email = developer3@skynettechnologies.com
